# ds_instructions_guide

./: extract_cell.py  extract_cell_25.py  list_cells.py  list_cells_to_file.py  notebook_cells_list.txt  pyproject.toml  taxi_dataset_for_upload.csv
.agent/skills/notebooklm-slide-generator/resources/: font_reference.json
notebook/: data_quality_assessment.ipynb
